--- a/src/components/GameTable/TableDisplay/Tabledisplay.module.css
+++ b/src/components/GameTable/TableDisplay/Tabledisplay.module.css
@@ -1,19 +1,18 @@
 .gameTableRoot {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: var(--mantine-spacing-xxs);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .gameTableHeader {
-  color: green;
+  position: sticky;
+  top: 0;
+  text-align: center;
+  height: 3rem;
+  z-index: 1;
 }
 
 .gameTableHeader th {
-  background-color: color-mix(
-    in srgb,
-    var(--mantine-color-hypePurplePrimary-5) 80%,
-    transparent
-  );
+  background-color: var(--mantine-color-hypePurplePrimary-9);
 }
 
 .gameTableHeader th:first-child {
