feat(table): scrollarea styling

--- a/src/components/GameTable/GameTable.module.css
+++ b/src/components/GameTable/GameTable.module.css
@@ -1,7 +1,9 @@
 .gameTableContainer {
   box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
+  border-radius: var(--mantine-spacing-xxs);
 }
 
 .gameTableScrollbar {
   color: transparent;
+  background: none;
 }
