--- a/src/components/GameTable/TableDisplay/Tabledisplay.module.css
+++ b/src/components/GameTable/TableDisplay/Tabledisplay.module.css
@@ -1,6 +1,7 @@
 .gameTableRoot {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: var(--mantine-spacing-xxs);
+  --table-highlight-on-hover-color: rgba(255, 255, 255, 0.3);
 }
 
 .gameTableHeader {
@@ -10,7 +11,7 @@
   height: 3rem;
   z-index: 1;
   color: var(--mantine-color-hypePurplePrimary-0);
-  background: linear-gradient(90deg, var(--mantine-color-hypePurplePrimary-9), var(--mantine-color-hypePink-9));
+  background: var(--mantine-color-table-header-gradient);
 }
 
 .gameTableHeader th:first-child {
@@ -19,4 +20,8 @@
 
 .gameTableHeader th:last-child {
   border-top-right-radius: var(--mantine-spacing-xxs);
+}
+
+.gameTableBody {
+  border-radius: var(--mantine-spacing-xl);
 }
