--- a/src/components/GameTable/GameTable.module.css
+++ b/src/components/GameTable/GameTable.module.css
@@ -1,6 +1,6 @@
 .gameTableContainer {
   box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
-  border-radius: var(--mantine-spacing-xxs);
+  border-radius: var(--mantine-radius-hype);
 }
 
 .gameTableScrollbar {
