--- a/src/components/GameTable/GameTable.module.css
+++ b/src/components/GameTable/GameTable.module.css
@@ -7,3 +7,8 @@
   color: transparent;
   background: none;
 }
+
+.gameTableScrollbarThumb {
+  color: transparent;
+  background-color: rgba(255, 255, 255, 0.4) !important;
+}
