--- a/src/components/GameTable/TableDisplay/Tabledisplay.module.css
+++ b/src/components/GameTable/TableDisplay/Tabledisplay.module.css
@@ -24,4 +24,13 @@
 
 .gameTableRow {
   transition: background-color 0.15s ease-out;
+  /* height: 60px; */
+}
+
+.gameTableCell {
+  width: 11.875%;
+}
+
+.gameTableCell:last-child {
+  width: 5%;
 }
