--- a/src/components/GameControls/GameControls.module.css
+++ b/src/components/GameControls/GameControls.module.css
@@ -1,3 +1,15 @@
 .gameControls {
   justify-content: center;
 }
+
+.delConfirmation {
+  padding: 0.2rem;
+  height: 2.15rem;
+  background-color: color-mix(
+    in srgb,
+    var(--mantine-color-hypePink-0) 100%,
+    transparent
+  );
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  border: none;
+}
