--- a/src/components/GameForm/ReleaseDatePicker/teststyling.scss
+++ b/src/components/GameForm/ReleaseDatePicker/teststyling.scss
@@ -4,3 +4,22 @@
   border-color: var(--mantine-color-gray-4);
 }
 
+.react-datepicker__header {
+  background-color: linear-gradient(90deg, var(--mantine-color-hypePurplePrimary-2), var(--mantine-color-hypePink-2))
+}
+
+.react-datepicker__day {
+  color: var(--mantine-color-black);
+  &:hover {
+    background-color: var(--mantine-color-hypePurplePrimary-1);
+  }
+  &--selected {
+    background-color: var(--mantine-color-hypePink-3);
+    &:hover {
+      background-color: var(--mantine-color-hypePink-5);
+    }
+  }
+  &--keyboard-selected {
+    background-color: var(--mantine-color-hypePurpleSecondary-1);
+  }
+}
