--- a/src/components/GameForm/ReleaseDatePicker/ReleaseDatePicker.scss
+++ b/src/components/GameForm/ReleaseDatePicker/ReleaseDatePicker.scss
@@ -1,5 +1,7 @@
 @import "../../../../node_modules/react-datepicker/dist/react-datepicker.css";
 
+// Universal
+
 .react-datepicker {
   border-color: var(--mantine-color-gray-4);
   font-family: var(--mantine-font-family);
@@ -25,6 +27,8 @@
   }
 }
 
+// Specific
+
 .react-datepicker__current-month {
   color: var(--mantine-color-hypePurplePrimary-0);
   font-weight: 500;
@@ -35,6 +39,29 @@
 }
 
 .react-datepicker__day {
+  color: var(--mantine-color-black);
+  &:hover {
+    background-color: var(--mantine-color-hypePurplePrimary-1);
+  }
+  &--selected {
+    background-color: var(--mantine-color-hypePink-3);
+    &:hover {
+      background-color: var(--mantine-color-hypePink-5);
+    }
+  }
+  &--keyboard-selected {
+    background-color: var(--mantine-color-hypePurpleSecondary-1);
+  }
+}
+
+// Quarter
+
+.react-datepicker-year-header {
+  color: var(--mantine-color-hypePurplePrimary-0);
+  font-weight: 500;
+}
+
+.react-datepicker__quarter-text {
   color: var(--mantine-color-black);
   &:hover {
     background-color: var(--mantine-color-hypePurplePrimary-1);
