--- a/src/components/AppContainer/AppContainer.module.css
+++ b/src/components/AppContainer/AppContainer.module.css
@@ -1,3 +1,12 @@
 .AppContainer {
   text-align: center;
 }
+
+.ServerError {
+  width: 25vw;
+  margin-top: 10rem;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
+}
