wip(game-form): datepicker dropdowns styling

--- a/src/components/GameForm/ReleaseDatePicker/ReleaseDatePicker.scss
+++ b/src/components/GameForm/ReleaseDatePicker/ReleaseDatePicker.scss
@@ -54,6 +54,12 @@
   }
 }
 
+.react-datepicker__month-select,
+.react-datepicker__year-select {
+  background-color: green;
+  border-radius: var(--mantine-radius-hype);
+}
+
 // Quarter
 
 .react-datepicker-year-header {
